k8s/minio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minioserver
  labels:
    run: minioserver
spec:
  replicas: 1
  selector:
    matchLabels:
      name: minioserver
  template:
    metadata:
      labels:
        name: minioserver
        run: minioserver
    spec:
      hostname: minioserver
      containers:
        - name: minioserver
          image: bitnami/minio:latest
          ports:
            - containerPort: 9000
              hostPort: 9000
