k8s/productservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
  labels:
    run: productservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: productservice
  template:
    metadata:
      labels:
        name: productservice
        run: productservice
    spec:
      hostname: productservice
      containers:
      - name: productservice
        image: hamzaak/productservice:1.0
        ports:
        - containerPort: 9001
          hostPort: 9001
