k8s/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: minioserver
  name: minioserver
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    name: minioserver
