k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: bookshopdb
  name: bookshopdb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: bookshopdb
