k8s/products-service.yml
kind: Service
apiVersion: v1
metadata:
  name: productservice
spec:
  clusterIP: None
  selector:
    run: productservice
  ports:
    - port: 9001
      targetPort: 9001
