k8s/shoppingcart-service.yml
kind: Service
apiVersion: v1
metadata:
  name: shoppingcartservice
spec:
  clusterIP: None
  selector:
    run: shoppingcartservice
  ports:
    - port: 9003
      targetPort: 9003
