k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.productms.bookshop
    http:
      paths:
      - backend:
          serviceName: product-service
          servicePort: 9001
        path: /
